--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -11,5 +11,8 @@
  * file per style scope.
  *
  *= require_tree .
- *= require_self
+ *= require font-awesome
+ *= require framework_and_overrides
+ *= require sb-admin
+ *= require theme-overrides
  */
