--- a/app/views/days/index.html.erb
+++ b/app/views/days/index.html.erb
@@ -5,6 +5,9 @@
         <div class="col-lg-12">
             <h1 class="page-header">
                 Overview
+                <span style="float:right;font-size:.5em;">
+                    <%= link_to "<i class='fa fa-file-o'></i> New Routine".html_safe, new_day_path %>
+                </span>
             </h1>
         </div>
     </div>
@@ -13,16 +16,79 @@
     <% @days.each do |day| %>
     <div class="row">
         <div class="col-lg-12">
-            <h2 class="page-header"><%= day.name %></h2>
+            <h2 class="page-header">
+                <%= link_to day.name, day_path(day) %>
+                <span style="float:right;">
+                    <%= link_to "<i class='fa fa-pencil-square-o'></i>".html_safe, edit_day_path(day) %>
+                    <%= link_to "<i class='fa fa-times'></i>".html_safe, day_path(day), method: 'delete', data: {confirm: "Are you sure?"} %>
+                </span>
+            </h2>
             <div class="row">
                 <% day.exercises.each do |exercise| %>
-                <div class="col-lg-4">
+                <div class="col-lg-6">
                     <div class="panel panel-green">
                         <div class="panel-heading">
-                            <h3 class="panel-title"><i class="fa fa-bar-chart-o"></i> <%= exercise.name %></h3>
+                            <h3 class="panel-title">
+                                <%= link_to "<i class='fa fa-bar-chart-o'></i>".html_safe, exercise_sets_path(exercise) %> <%= link_to exercise.name, exercise_path(exercise) %>
+                    			<span style="float:right;">
+                    				<%= link_to "Log Set <i class='fa fa-plus'></i>".html_safe, new_exercise_set_path(exercise), style: "color:white;margin-right:10px;" %>
+                    				<%= link_to "<i class='fa fa-pencil-square-o'></i>".html_safe, edit_exercise_path(exercise), style: "color:white;" %>
+                    				<%= link_to "<i class='fa fa-times'></i>".html_safe, exercise_path(exercise), style: "color:white;", method: 'delete', data: {confirm: "Are you sure?"} %>
+                    			</span>
+                            </h3>
                         </div>
                         <div class="panel-body">
-                            <div id="morris-line-chart-<%= exercise.id %>" style="height:250px;"></div>
+                            <div id="chart-<%= "#{day.id}-#{exercise.id}" %>">
+                                <div id="container-<%= "#{day.id}-#{exercise.id}" %>"></div>
+                                <script type="application/javascript">
+                                $(function () {
+                                    $('#container-<%= "#{day.id}-#{exercise.id}" %>').highcharts({
+                                        chart: {
+                                            type: 'line',
+                                            height: '250'
+                                        },
+                                        title: {
+                                            style : {
+                                                display : 'none'
+                                            }
+                                        },
+                                        xAxis: {
+                                            categories: <%= exercise.dates %>.split(', ')
+                                        },
+                                        yAxis: {
+                                            title: {
+                                                text: 'Weight',
+                                                style : {
+                                                    display : 'none'
+                                                }
+                                            },
+                                            plotLines: [{
+                                                value: 0,
+                                                width: 1,
+                                                color: '#808080'
+                                            }]
+                                        },
+                                        tooltip: {
+                                            valueSuffix: 'Lbs'
+                                        },
+                                        legend: {
+                                            layout: 'horizontal',
+                                            align: 'bottom',
+                                            verticalAlign: 'bottom',
+                                            borderWidth: 0,
+                                            align: 'center'
+                                        },
+                                        series: [{
+                                            name: '1-Rep Max',
+                                            data: <%= exercise.cumulative_max_weight_days %>.split(', ').map(function(x){return parseInt(x)})
+                                        }, {
+                                            name: 'Cumulative Max',
+                                            data: <%= exercise.one_rep_max_weight_days %>.split(', ').map(function(x){return parseInt(x)})
+                                        }]
+                                    });
+                                });
+                                </script>
+                            </div>
                         </div>
                     </div>
                 </div>
